--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus unde excepturi quasi libero illum numquam sapiente ad totam, neque architecto ipsum expedita, aliquam quod obcaecati culpa quia soluta placeat quibusdam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, itaque. Tempore dicta cumque voluptates, in illo quidem, ullam quisquam eius saepe quis tenetur porro perspiciatis consectetur totam facere, velit facilis!</p>
         </article>
     </main>
 </body>
