--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso em Video</title>
+    <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -13,11 +14,15 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus unde excepturi quasi libero illum numquam sapiente ad totam, neque architecto ipsum expedita, aliquam quod obcaecati culpa quia soluta placeat quibusdam.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, itaque. Tempore dicta cumque voluptates, in illo quidem, ullam quisquam eius saepe quis tenetur porro perspiciatis consectetur totam facere, velit facilis!</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
